updaed workflow to include renv

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,7 +25,10 @@ jobs:
       #     cache: 'pip'
       # - run: pip install jupyter
       # - run: pip install -r requirements.txt
-
+      - name: Install R Dependencies
+        uses: r-lib/actions/setup-renv@v2
+        with:
+          cache-version: 1
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
         with:
