--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,8 @@ website:
         text: Syllabus
       - href: lectures.qmd
         text: Lectures
+      - href: homework.qmd
+        text: Homework Answers
 
 format:
   html:
