--- a/renv/settings.json
+++ b/renv/settings.json
@@ -1,6 +1,9 @@
 {
   "bioconductor.version": null,
-  "external.libraries": [],
+  "external.libraries": [
+    "/usr/local/lib/R/site-library",
+    "/usr/local/lib/R/library"
+  ],
   "ignored.packages": [],
   "package.dependency.fields": [
     "Imports",
@@ -11,7 +14,7 @@
   "ppm.ignored.urls": [],
   "r.version": null,
   "snapshot.type": "implicit",
-  "use.cache": true,
+  "use.cache": false,
   "vcs.ignore.cellar": true,
   "vcs.ignore.library": true,
   "vcs.ignore.local": true,
