--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,6 +2,8 @@ on:
   workflow_dispatch:
   push:
     branches: master
+  pull_request:
+    branches: master
 
 # sandbox not needed since all is done in clean environment
 # this save a bit of time in github actions
@@ -35,6 +37,7 @@ jobs:
         with:
           cache-version: 1
       - name: Render and Publish
+        if: github.event_name != 'pull_request'
         uses: quarto-dev/quarto-actions/publish@v2
         with:
           target: gh-pages
