--- a/renv/settings.json
+++ b/renv/settings.json
@@ -1,9 +1,6 @@
 {
   "bioconductor.version": null,
-  "external.libraries": [
-    "/usr/local/lib/R/site-library",
-    "/usr/local/lib/R/library"
-  ],
+  "external.libraries": [],
   "ignored.packages": [],
   "package.dependency.fields": [
     "Imports",
@@ -14,7 +11,7 @@
   "ppm.ignored.urls": [],
   "r.version": null,
   "snapshot.type": "implicit",
-  "use.cache": false,
+  "use.cache": true,
   "vcs.ignore.cellar": true,
   "vcs.ignore.library": true,
   "vcs.ignore.local": true,
