--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,7 +38,7 @@ jobs:
           cache-version: 1
       - name: Render
         uses: quarto-dev/quarto-actions/render@v2
-      - name: Render and Publish
+      - name: Publish
         if: github.event_name != 'pull_request'
         uses: quarto-dev/quarto-actions/publish@v2
         with:
